Initialize Direct Composition HW overlay support at the right time.

Currently we initialize it too soon, so on multi-GPU system, the
workaround |disable_direct_composition| may not be correctly applied.

BUG=907684
TEST=manual
R=piman@chromium.org,sunnyps@chromium.org

Change-Id: Id30e09f2229b4229b82ee9330523426b470b7c5d
Reviewed-on: https://chromium-review.googlesource.com/c/1346998
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610329}
Former-commit-id: 33f395ae2a74e955ab820e43c037e86747d36b2e